Prevent word breaks in tables

--- a/wp-content/themes/reconasia/assets/_scss/pages/single.scss
+++ b/wp-content/themes/reconasia/assets/_scss/pages/single.scss
@@ -134,6 +134,7 @@
 
   .wp-block-table {
     color: $color-black-190;
+    word-break: normal;
     border: 0 !important;
 
     &.aligncenter,
